@@ -51,11 +51,12 @@ $LastChangedRevision$
 			$query[] = $sfilter;
 			$query[] = $cfilter;
 
+			$expired = ($publish_expired_articles) ? '' : ' and (now() <= Expires or Expires = '.NULLDATETIME.') ';
 			$rs = safe_rows_start(
-				"*, unix_timestamp(Posted) as uPosted, ID as thisid",
+				"*, unix_timestamp(Posted) as uPosted, unix_timestamp(Expires) as uExpires, ID as thisid",
 				"textpattern",
 				"Status = 4 ".join(' ',$query).
-				"and Posted < now() order by Posted desc limit $limit"
+				"and Posted < now()".$expired."order by Posted desc limit $limit"
 			);
 
 			if($rs) {
